# dumb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  lsan_suppressions.txt
code/: dumb_game_logic.cpp  dumb_gnulinux_sdl.cpp  dumb_gnulinux_sdl.hpp  dumb_gnulinux_x11.cpp  dumb_gnulinux_x11.h  dumb_gnulinux_xcb.cpp  dumb_gnulinux_xcb.hpp  dumb_keycodes.hpp  dumb_platform.h  dumb_platform.hpp  xcaliber.c  xcaliber.h  xcaliber_colour.c  xcaliber_colour.h  xcaliber_common.h  xcaliber_draw_command.c  xcaliber_draw_command.h  xcaliber_game_logic.c  xcaliber_game_logic.h  xcaliber_geometry.h  xcaliber_gnulinux.c  xcaliber_hot_reload.c  xcaliber_hot_reload.h  xcaliber_keycodes.h  xcaliber_linear_arena.c  xcaliber_linear_arena.h  xcaliber_math.c  xcaliber_math.h  xcaliber_platform.h  xcaliber_renderer.c  xcaliber_renderer.h  xcaliber_stack_arena.c  xcaliber_stack_arena.h  xcaliber_transform.c  xcaliber_transform.h
code/hyper/: README.org  hyper.h  hyper_common.h
code/hyper/core/: hyper_colour.c  hyper_colour.h  hyper_hot_reload.c  hyper_hot_reload.h  hyper_linear_arena.c  hyper_linear_arena.h  hyper_math.c  hyper_math.h  hyper_stack_arena.c  hyper_stack_arena.h
code/hyper/game/: hyper_game_logic.c  hyper_game_logic.h  hyper_keys.h
code/hyper/renderer/: hyper_draw_command.h  hyper_renderer.c  hyper_renderer.h
